fix cards overflow

--- a/frontend/src/Components/main/Card.scss
+++ b/frontend/src/Components/main/Card.scss
@@ -1,5 +1,8 @@
 /* ------------ Cards ------------- */
-
+.Cards {
+	overflow: scroll !important;
+	height: 7em !important;
+}
 .MainDash {
 	display: flex;
 	flex-direction: column;
